--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/styles.css">
     <title>ToDo</title>
 </head>
 <body>
     <header></header>
     <main>
-        <p>To Do</p>
-        <input class="todo" type="text" placeholder="text">
-        <button class="add">add</button>
-        <div class="list"></div>
+        <p class="title">To Do</p>
+        <section class="flex">
+            <input class="todo" type="text" placeholder="text">
+            <button class="add">add</button>
+        </section>
+        <div class="list">
+        </div>
     </main>
     <footer></footer>
     <script src="toDo.js"></script>
